Maths fixes - complex analysis

--- a/notebooks/c_mathematics/complex_analysis/1_introduction.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/1_introduction.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "$$ z^* \\equiv x - iy $$\n",
     "\n",
-    "This is an [involutory operation](https://en.wikipedia.org/wiki/Involution_(mathematics)) since \\\\( (z^*)^* = z \\\\) with the following properties:\n",
+    "This is an [involutory operation](https://en.wikipedia.org/wiki/Involution_(mathematics)) since $ (z^*)^* = z $ with the following properties:\n",
     "\n",
     "$$ (z_1 \\pm z_2)^* = z_1^* \\pm z_2^* \\\\\n",
     "(z_1 \\cdot z_2)^* = z_1^* \\cdot z_2^* \\\\\n",
@@ -114,7 +114,7 @@
     "$$ z = r( cos \\varphi + i \\sin \\varphi) \\\\\n",
     "z^n = r^n ( cos n \\varphi + i \\sin n \\varphi) $$\n",
     "\n",
-    "Let \\\\(w = z^{1/n} \\\\), then\n",
+    "Let $w = z^{1/n} $, then\n",
     "\n",
     "$$ w = r^{1/n} \\left ( \\cos \\left ( \\frac{ \\varphi}{n} + \\frac{2k \\pi}{n} \\right ) + i \\sin \\left ( \\frac{ \\varphi}{n} + \\frac{2k \\pi}{n} \\right ) \\right ), $$\n",
     "\n",
