--- a/notebooks/c_mathematics/complex_analysis/2_complex_plane.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/2_complex_plane.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "- If a number $z$ is assigned a point $P(x, y)$, then the complex conjugate $z^*$ is assigned a point $P^*(x, -y)$, which is just a reflection of $P$ with respect to the real axis.\n",
     "\n",
-    "- Every point $P(x, y)$ has a corresponding vector $\\vec{OP}$ from the origin to $P$. The sum $z_1 + z_2$ therefore represents vector addition \\\\( \\overrightarrow{OP_1} + \\overrightarrow{OP_2} \\\\).\n",
+    "- Every point $P(x, y)$ has a corresponding vector $\\vec{OP}$ from the origin to $P$. The sum $z_1 + z_2$ therefore represents vector addition $ \\overrightarrow{OP_1} + \\overrightarrow{OP_2} $.\n",
     "\n",
     "Because of the vector analogy, we can also say that complex numbers satisfy the *triangle inequalities*:\n",
     "\n",
@@ -112,7 +112,7 @@
     "\n",
     "The angle $\\varphi$ is called the **argument** (or phase) of a complex number $z$ and we write $\\text{Arg}(z) = \\varphi$. A special case is the complex number $z=0$ for which $r = 0$ and its argument is not defined. \n",
     "\n",
-    "Finding $\\varphi$ is delicate because $\\tan$ is a multivalued function. To avoid ambiguity, the simplest choice is $n = 0$ so that the interval is of length $2\\pi$ and \\\\( - \\pi < \\text{arg}(z) \\leq \\pi \\\\). The value of $\\text{Arg}(z)$ with $n=0$ is called the **principal value** of the argument. With this:\n",
+    "Finding $\\varphi$ is delicate because $\\tan$ is a multivalued function. To avoid ambiguity, the simplest choice is $n = 0$ so that the interval is of length $2\\pi$ and $ - \\pi < \\text{arg}(z) \\leq \\pi $. The value of $\\text{Arg}(z)$ with $n=0$ is called the **principal value** of the argument. With this:\n",
     "\n",
     "$$ \\text{arg}(1) = 0, \\quad \\text{arg}(i) = \\frac{\\pi}{2}, \\quad \\text{arg}(-1) = \\pi, \\quad \\text{arg}(-i) = -\\frac{\\pi}{2}, \\quad \\text{etc.} $$\n",
     "\n",
@@ -161,7 +161,7 @@
     "```{index} Polar form of complex numbers\n",
     "```\n",
     "\n",
-    "The property \\\\( \\text{arg}(z_1 \\cdot z_2) = \\text{arg}(z_1) + \\text{arg}(z_2) \\\\) might remind us of logarithms, where $\\log (a \\cdot b) = \\log a + \\log b$. This is not a coincidence! \n",
+    "The property $ \\text{arg}(z_1 \\cdot z_2) = \\text{arg}(z_1) + \\text{arg}(z_2) $ might remind us of logarithms, where $\\log (a \\cdot b) = \\log a + \\log b$. This is not a coincidence! \n",
     "\n",
     "The exponential function, which we will look at in the next chapter, allows us to write complex numbers in a *polar form*:\n",
     "\n",
