--- a/notebooks/c_mathematics/complex_analysis/3_complex_functions.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/3_complex_functions.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "$$ e^{z_1 + z_2} = e^{z_1} e^{z_2}, \\quad \\frac{1}{e^z} = e^{-z}, \\quad e^{z_1 - z_2} = \\frac{e^{z_1}}{e^{z_2}}. $$\n",
     "\n",
-    "It is easy to separate $e^z$ into its real $u(x, y)$ and imaginary $v(x, y)$ part: \\\\( \\text{Re}(e^z) = e^x \\cos y, \\text{Im}(e^z) = e^x \\sin y \\\\). Let us show the real part on a surface plot:\n",
+    "It is easy to separate $e^z$ into its real $u(x, y)$ and imaginary $v(x, y)$ part: $ \\text{Re}(e^z) = e^x \\cos y, \\text{Im}(e^z) = e^x \\sin y $. Let us show the real part on a surface plot:\n",
     "\n",
     "```{margin} This is an interactive figure!\n",
     "Make sure to rotate and move around the figure.\n",
@@ -448,7 +448,7 @@
     "\n",
     "We would like to extend the idea of a logarithm being the inverse of the exponential function, but since the complex exponential function is not bijective, the inverse function does not exist. What we mean is that the logarithm cannot be a single-valued function since $z = |z| e^{i(arg(z) + 2n \\pi)}$ has the same value of the logarithm for all integers $n$ since it is periodic. However, as we saw above, the complex exponential function is injective on an interval of length $2 \\pi$ so we can define an inverse on that interval.\n",
     "\n",
-    "Since the exponential function maps a sum to a product (i.e. \\\\( e^{a+b} = e^a e^b \\\\)), the logarithm of a product must be equal to the sum of their logarithms (i.e. \\\\( \\ln(z_1 z_2) = \\ln(z_1) + \\ln(z_2) \\\\)):\n",
+    "Since the exponential function maps a sum to a product (i.e. $ e^{a+b} = e^a e^b $), the logarithm of a product must be equal to the sum of their logarithms (i.e. $ \\ln(z_1 z_2) = \\ln(z_1) + \\ln(z_2) $):\n",
     "\n",
     "$$ \\begin{align}\n",
     "Ln(z) & = Ln(|z|e^{i Arg(z)}) =  \\ln(|z|) + \\ln(e^{i Arg(z)}) \\\\\n",
@@ -541,31 +541,31 @@
     "   :widths: 10 10 20 10 10\n",
     "   :align: center\n",
     "     \n",
-    "   * - \\\\( f(z) \\\\)\n",
-    "     - Period \\\\( f \\\\)\n",
+    "   * - $ f(z) $\n",
+    "     - Period $ f $\n",
     "     - Zeros\n",
-    "     - Period \\\\( g \\\\)\n",
-    "     - \\\\( g(z) \\\\)\n",
-    "   * - \\\\( \\sin z \\\\)\n",
-    "     - \\\\( 2 \\pi \\\\)\n",
-    "     - \\\\( k \\pi \\\\)\n",
-    "     - \\\\( \\pi \\\\)\n",
-    "     - \\\\( \\tan z \\\\)\n",
-    "   * - \\\\( \\cos z \\\\)\n",
-    "     - \\\\( 2 \\pi \\\\)\n",
-    "     - \\\\( (2k+1) \\pi / 2 \\\\)\n",
-    "     - \\\\( \\pi \\\\)\n",
-    "     - \\\\( \\cot z \\\\)\n",
-    "   * - \\\\( \\sinh z \\\\)\n",
-    "     - \\\\( 2 \\pi i \\\\)\n",
-    "     - \\\\( k \\pi i \\\\)\n",
-    "     - \\\\( \\pi i \\\\)\n",
-    "     - \\\\( \\tanh z \\\\)\n",
-    "   * - \\\\( \\cosh z \\\\)\n",
-    "     - \\\\( 2 \\pi i \\\\)\n",
-    "     - \\\\( (2k+1) \\pi i / 2 \\\\)\n",
-    "     - \\\\( \\pi i \\\\)\n",
-    "     - \\\\( \\coth z \\\\)\n",
+    "     - Period $ g $\n",
+    "     - $ g(z) $\n",
+    "   * - $ \\sin z $\n",
+    "     - $ 2 \\pi $\n",
+    "     - $ k \\pi $\n",
+    "     - $ \\pi $\n",
+    "     - $ \\tan z $\n",
+    "   * - $ \\cos z $\n",
+    "     - $ 2 \\pi $\n",
+    "     - $ (2k+1) \\pi / 2 $\n",
+    "     - $ \\pi $\n",
+    "     - $ \\cot z $\n",
+    "   * - $ \\sinh z $\n",
+    "     - $ 2 \\pi i $\n",
+    "     - $ k \\pi i $\n",
+    "     - $ \\pi i $\n",
+    "     - $ \\tanh z $\n",
+    "   * - $ \\cosh z $\n",
+    "     - $ 2 \\pi i $\n",
+    "     - $ (2k+1) \\pi i / 2 $\n",
+    "     - $ \\pi i $\n",
+    "     - $ \\coth z $\n",
     "   ```\n",
     "   \n",
     "for $k \\in \\mathbb{Z}$.\n",
