--- a/notebooks/c_mathematics/complex_analysis/4_holomorphic_functions.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/4_holomorphic_functions.ipynb
@@ -24,10 +24,10 @@
     "\n",
     "- $z$ is entire\n",
     "- all polynomials are entire\n",
-    "- \\\\( 1/z \\\\) is holomorphic in \\\\( \\mathbb{C} \\backslash \\{ 0 \\} \\\\)\n",
+    "- $ 1/z $ is holomorphic in $ \\mathbb{C} \\backslash \\{ 0 \\} $\n",
     "- all rational functions are holomorphic in $\\mathbb{C}$ except in the zeros of their denominators\n",
-    "- \\\\( \\sin z, \\cos z \\\\) are entire\n",
-    "- \\\\( \\sqrt{z} \\\\) is holomorphic in $\\mathbb{C} \\backslash (- \\infty, 0]$"
+    "- $ \\sin z, \\cos z $ are entire\n",
+    "- $ \\sqrt{z} $ is holomorphic in $\\mathbb{C} \\backslash (- \\infty, 0]$"
    ]
   },
   {
@@ -107,10 +107,10 @@
     "\n",
     "The addition, product, quotient and chain rules apply in complex differentiation similarly to real calculus. Let $f, g : D \\to \\mathbb{C}$ be differentiable at $z_0 \\in D$, then:\n",
     "\n",
-    "- $\\alpha f + \\beta g$ is differentiable for all \\\\( \\alpha, \\beta \\in \\mathbb{C} \\\\) at $z_0$:    \\\\( (\\alpha f + \\beta g)'(z_0) = \\alpha f' (z_0) + \\beta g'(z_0) \\\\)\n",
+    "- $\\alpha f + \\beta g$ is differentiable for all $ \\alpha, \\beta \\in \\mathbb{C} $ at $z_0$:    $ (\\alpha f + \\beta g)'(z_0) = \\alpha f' (z_0) + \\beta g'(z_0) $\n",
     "- $fg$ is differentiable at $z_0$: $(fg)'(z_0) = f'(z_0)g(z_0) + f(z_0)g'(z_o)$\n",
-    "- $\\frac{f}{g}$ is differentiable at $z_0$ for $g(z_0) \\neq 0$: \\\\( \\left( \\frac{f}{g} \\right)' (z_0) = \\frac{f'(z_0)g(z_0) - f(z_0)g'(z_0)}{(g(z_0))^2} \\\\)\n",
-    "- Let $h: D_1 \\to \\mathbb{C}$, where $D_1$ is an open set containing $f(D)$. If $h$ is differentiable at $f(z_0)$, then $h \\circ f$ is differentiable at $z_0$: \\\\( (h \\circ f)'(z_0) = h'(f(z_0))f'(z_0). \\\\)\n",
+    "- $\\frac{f}{g}$ is differentiable at $z_0$ for $g(z_0) \\neq 0$: $ \\left( \\frac{f}{g} \\right)' (z_0) = \\frac{f'(z_0)g(z_0) - f(z_0)g'(z_0)}{(g(z_0))^2} $\n",
+    "- Let $h: D_1 \\to \\mathbb{C}$, where $D_1$ is an open set containing $f(D)$. If $h$ is differentiable at $f(z_0)$, then $h \\circ f$ is differentiable at $z_0$: $ (h \\circ f)'(z_0) = h'(f(z_0))f'(z_0). $\n",
     "\n",
     "```"
    ]
