--- a/notebooks/c_mathematics/complex_analysis/5_integrating.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/5_integrating.ipynb
@@ -12,7 +12,7 @@
     "(comp_contours)=\n",
     "## Contours\n",
     "\n",
-    "A continuous or piecewise continuous mapping $\\gamma : [a,b] \\to \\mathbb{C}$ is called a **contour in $\\mathbb{C}$**. Often the same notation $\\gamma$ and the same name *contour* is used for its image. The contour is **closed** if \\\\( \\gamma (a) = \\gamma (b) \\\\) . The contour is **simple** if it does not intersect itself (but \\\\( \\gamma (a) = \\gamma (b) \\\\) is allowed). A **parameterisation** of a given contour in the complex plane is any $\\gamma$ whose image matches the contour.\n",
+    "A continuous or piecewise continuous mapping $\\gamma : [a,b] \\to \\mathbb{C}$ is called a **contour in $\\mathbb{C}$**. Often the same notation $\\gamma$ and the same name *contour* is used for its image. The contour is **closed** if $ \\gamma (a) = \\gamma (b) $ . The contour is **simple** if it does not intersect itself (but $ \\gamma (a) = \\gamma (b) $ is allowed). A **parameterisation** of a given contour in the complex plane is any $\\gamma$ whose image matches the contour.\n",
     "\n",
     "**Examples:**"
    ]
