--- a/notebooks/c_mathematics/complex_analysis/6_fractals.ipynb
+++ b/notebooks/c_mathematics/complex_analysis/6_fractals.ipynb
@@ -277,14 +277,14 @@
     "### Perimeter of the snowflake\n",
     "\n",
     "With each iteration, the number of sides in the Koch snowflake increases four times. Therefore, the number of sides after $n$ iterations is:\n",
-    "\\\\(N_n=N_{n-1}\\cdot4=3\\cdot4^{n}.\\\\)\n",
+    "$N_n=N_{n-1}\\cdot4=3\\cdot4^{n}.$\n",
     "\n",
     "The length of each side in the snowflake increases with each iteration according to:\n",
-    "\\\\(S_n =\\frac{S_{n-1}}{3}=\\frac{s}{3^n},\\\\)\n",
+    "$S_n =\\frac{S_{n-1}}{3}=\\frac{s}{3^n},$\n",
     "where $s$ is the length of the side of the original equilateral triangle.\n",
     "\n",
     "The length of the perimeter is therefore:\n",
-    "\\\\(P_n = N_n \\cdot S_n = 3\\cdot s\\cdot \\Big(\\frac{4}{3}\\Big)^{n}.\\\\)\n",
+    "$P_n = N_n \\cdot S_n = 3\\cdot s\\cdot \\Big(\\frac{4}{3}\\Big)^{n}.$\n",
     "\n",
     "The code used for Koch curve construction calculates positions of the vertices of the curve. We can calculate, therefore, the perimeter length by summing up the lengths of vectors created by consecutive vertices in a single curve and multiplying by three to get the length of snowflake perimeter."
    ]
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The relationship between number of iterations and perimeter length obeys a power law and for inifinte number of iterations \\\\(\\lim_{n\\rightarrow \\infty}P_n=\\infty.\\\\)\n",
+    "The relationship between number of iterations and perimeter length obeys a power law and for inifinte number of iterations $\\lim_{n\\rightarrow \\infty}P_n=\\infty.$\n",
     "\n",
     "### Fractal properties of the Koch curve\n",
     "\n",
@@ -389,7 +389,7 @@
     "This is one of the most famous fractals that we showed in the animation at the begining of the notebook.\n",
     "\n",
     "Mandelbrot set, $M$, is constructed with a set of complex numbers $c$ for which the polynomial\n",
-    "\\\\(P(z)=z^2+c\\\\)\n",
+    "$P(z)=z^2+c$\n",
     "does not diverge when iterated from $z=0$ through $P(P(0))$, $P(P(P(0)))$ and so on.\n",
     "\n",
     "We can construct it ourselves. Let's define _mandelbrot_ function first that takes inputs $z$ and complex number $c$."
