Maths fixes: differential_equations content

--- a/notebooks/c_mathematics/differential_equations/10_heat_eq.ipynb
+++ b/notebooks/c_mathematics/differential_equations/10_heat_eq.ipynb
@@ -49,32 +49,32 @@
     "\\text{IC} \\qquad & u(x, 0) = \\phi(x), \\quad 0 \\leq x \\leq L\n",
     "\\end{aligned} $$\n",
     "\n",
-    "For separation of variables to be successful, we need to transform the boundary conditions to homogeneous ones. We do that by seeking the solution of the form \\\\( u(x,t) = U(x,t) + S(x,t) \\\\) where $S$ is of the form\n",
+    "For separation of variables to be successful, we need to transform the boundary conditions to homogeneous ones. We do that by seeking the solution of the form $ u(x,t) = U(x,t) + S(x,t) $ where $S$ is of the form\n",
     "\n",
-    "\\\\[ S(t,x) = A(t) \\left( 1 - \\frac{x}{L} \\right) + B(t) \\frac{x}{L} \\\\]\n",
+    "$$ S(t,x) = A(t) \\left( 1 - \\frac{x}{L} \\right) + B(t) \\frac{x}{L} $$\n",
     "\n",
-    "and \\\\( A(t), B(t) \\\\) are unknown functions chosen such that \\\\( S(t,x) \\\\) satisfies the original boundary conditions\n",
+    "and $ A(t), B(t) $ are unknown functions chosen such that $ S(t,x) $ satisfies the original boundary conditions\n",
     "\n",
-    "\\\\[ a_1 S(t, 0) + b_1 S_x(t, 0) = g_1(t) \\\\\n",
-    "a_2 S(t,L) + b_2 S_x(t,L) = g_2(t) \\\\]\n",
+    "$$ a_1 S(t, 0) + b_1 S_x(t, 0) = g_1(t) \\\\\n",
+    "a_2 S(t,L) + b_2 S_x(t,L) = g_2(t) $$\n",
     "\n",
     "or after substituting in $S$:\n",
     "\n",
-    "\\\\[ a_1 A(t) + \\frac{b_1}{L} \\big( {-A(t)} + B(t) \\big) = g_1(t) \\\\\n",
-    "a_2 B(t) + \\frac{b_2}{L} \\big( {-A(t)} + B(t) \\big) = g_2(t) \\\\]\n",
+    "$$ a_1 A(t) + \\frac{b_1}{L} \\big( {-A(t)} + B(t) \\big) = g_1(t) \\\\\n",
+    "a_2 B(t) + \\frac{b_2}{L} \\big( {-A(t)} + B(t) \\big) = g_2(t) $$\n",
     "\n",
-    "This is a simple system of two linear equations for $A$ and $B$ which we can solve using Cramer's rule. Substituting \\\\(u = U + S\\\\) in the original PDE, we get, in general, an inhomogeneous PDE\n",
+    "This is a simple system of two linear equations for $A$ and $B$ which we can solve using Cramer's rule. Substituting $u = U + S$ in the original PDE, we get, in general, an inhomogeneous PDE\n",
     "\n",
-    "\\\\[ -U_t + k^2 U_{xx} = -S_t \\\\]\n",
+    "$$ -U_t + k^2 U_{xx} = -S_t $$\n",
     "\n",
     "but the boundary conditions are now homogeneous\n",
     "\n",
-    "\\\\[ a_1 U(t,0) + b_1 U_x(t,0) = 0 \\\\\n",
-    "a_2 U(t,L) + b_2 U_x(t,L) = 0 \\\\]\n",
+    "$$ a_1 U(t,0) + b_1 U_x(t,0) = 0 \\\\\n",
+    "a_2 U(t,L) + b_2 U_x(t,L) = 0 $$\n",
     "\n",
     "and the initial condition becomes\n",
     "\n",
-    "\\\\[ U(0, x) = \\phi(x) - S(0,x) \\\\]"
+    "$$ U(0, x) = \\phi(x) - S(0,x) $$"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "\\text{IC} \\qquad & u(0, x) = \\sin (\\pi x) + 1, \\quad 0 \\leq x \\leq 1\n",
     "\\end{aligned} $$\n",
     "\n",
-    "where \\\\(u \\equiv u(t, x)\\\\) is temperature in the domain. For simplicity let us choose \\\\(k^2 = 1\\\\). Note that mathematically it doesn't really matter what \\\\( k^2 \\\\) is since we can always transform $u$ such that \\\\(k^2\\\\) is unity (in engineering it, of course, matters).\n",
+    "where $u \\equiv u(t, x)$ is temperature in the domain. For simplicity let us choose $k^2 = 1$. Note that mathematically it doesn't really matter what $ k^2 $ is since we can always transform $u$ such that $k^2$ is unity (in engineering it, of course, matters).\n",
     "\n",
     "Let us draw a simple diagram to visualise our domain and auxiliary conditions."
    ]
@@ -155,34 +155,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we have to transform the BCs to homogeneous ones. Looking at BCs, we could guess that we only need to translate $u$ by $+1$, i.e. $u = U + S = 1$ BC will become homogeneous for $U$. But we can follow the above procedure and get \\\\( A = B = 1 \\\\). Then \\\\( S = 1 - x/L + x/L = 1 \\\\). So our transformation is, as we expected,\n",
+    "First we have to transform the BCs to homogeneous ones. Looking at BCs, we could guess that we only need to translate $u$ by $+1$, i.e. $u = U + S = 1$ BC will become homogeneous for $U$. But we can follow the above procedure and get $ A = B = 1 $. Then $ S = 1 - x/L + x/L = 1 $. So our transformation is, as we expected,\n",
     "\n",
-    "\\\\[ u = U + S = U + 1 \\\\]\n",
+    "$$ u = U + S = U + 1 $$\n",
     "\n",
     "Substituting this in the original problem we get the transformed problem\n",
     "\n",
-    "\\\\[ \\begin{aligned}\n",
+    "$$ \\begin{aligned}\n",
     "\\text{PDE} \\qquad & U_t = U_{xx} \\\\ \\\\\n",
     "\\text{BCs} \\qquad & \\begin{cases}\n",
     "    U(t, 0) = 0 \\\\\n",
     "    U(t, 1) + U_x(t, 1) = 0\n",
     "\\end{cases} \\\\ \\\\\n",
     "\\text{IC} \\qquad & U(0, x) = \\sin (\\pi x)\n",
-    "\\end{aligned} \\\\]\n",
+    "\\end{aligned} $$\n",
     "\n",
-    "which we can now solve using separation of variables. We seek solutions of the form \\\\( U = X(x)T(t) \\\\) and substitute it into our PDE and divide both sides by \\\\( XT \\\\) to get **separated variables**:\n",
+    "which we can now solve using separation of variables. We seek solutions of the form $ U = X(x)T(t) $ and substitute it into our PDE and divide both sides by $ XT $ to get **separated variables**:\n",
     "\n",
-    "\\\\[ \\frac{T'}{T} = \\frac{X''}{X} \\\\]\n",
+    "$$ \\frac{T'}{T} = \\frac{X''}{X} $$\n",
     "\n",
-    "where LHS depends only on \\\\( t \\\\) and RHS on \\\\( x \\\\). Since \\\\( x, t \\\\) are independent of each other, each side must be a constant, say \\\\( \\alpha \\\\). We get two ODEs:\n",
+    "where LHS depends only on $ t $ and RHS on $ x $. Since $ x, t $ are independent of each other, each side must be a constant, say $ \\alpha $. We get two ODEs:\n",
     "\n",
-    "\\\\[ T' - \\alpha T = 0 \\\\ X'' - \\alpha X = 0 \\\\]\n",
+    "$$ T' - \\alpha T = 0 \\\\ X'' - \\alpha X = 0 $$\n",
     "\n",
-    "Now notice that \\\\( \\alpha \\\\) must be negative, i.e. \\\\( \\alpha = - \\lambda^2 \\\\) since then \\\\( T' = -\\lambda^2 T \\\\) has the solution \\\\( T(t) = C \\exp (-\\lambda^2 t) \\\\) which decays with time, as it should (instead of growing to \\\\( \\infty \\\\)). Then \\\\( X(x) = D \\sin (\\lambda x) + E \\cos (\\lambda x) \\\\) and multiplying them together:\n",
+    "Now notice that $ \\alpha $ must be negative, i.e. $ \\alpha = - \\lambda^2 $ since then $ T' = -\\lambda^2 T $ has the solution $ T(t) = C \\exp (-\\lambda^2 t) $ which decays with time, as it should (instead of growing to $ \\infty $). Then $ X(x) = D \\sin (\\lambda x) + E \\cos (\\lambda x) $ and multiplying them together:\n",
     "\n",
-    "\\\\[ U(x, t) = e^{-\\lambda^2 t} \\left[ D \\sin (\\lambda x) + E \\cos (\\lambda x) \\right] \\\\]\n",
+    "$$ U(x, t) = e^{-\\lambda^2 t} \\left[ D \\sin (\\lambda x) + E \\cos (\\lambda x) \\right] $$\n",
     "\n",
-    "where \\\\( D, E \\\\) are arbitrary constants (multiplying them by \\\\( C \\\\), another constant, doesn't matter). We now have infinitely many *simple* solutions to \\\\( u_t = u_{xx}\\\\). Solutions are simple because any temperature \\\\( u(x, t) \\\\) will have the same \"shape\" for any value of \\\\( t \\\\), but it exponentially decays with time."
+    "where $ D, E $ are arbitrary constants (multiplying them by $ C $, another constant, doesn't matter). We now have infinitely many *simple* solutions to $ u_t = u_{xx}$. Solutions are simple because any temperature $ u(x, t) $ will have the same \"shape\" for any value of $ t $, but it exponentially decays with time."
    ]
   },
   {
@@ -229,12 +229,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, as we can see from the figure above, not all of these solutions satisfy auxiliary conditions, but some of them do and we are only interested in the ones which do. So we substitute \\\\( U \\\\) in BCs:\n",
+    "However, as we can see from the figure above, not all of these solutions satisfy auxiliary conditions, but some of them do and we are only interested in the ones which do. So we substitute $ U $ in BCs:\n",
     "\n",
-    "\\\\[ U(t, 0) = E \\ e^{- \\lambda^2 t} = 0 \\quad \\Rightarrow \\quad E = 0 \\\\\n",
-    "U(t, 1) + U_x(t, 1) =  D \\ e^{- \\lambda^2 t} ( \\sin \\lambda + \\lambda \\cos \\lambda) = 0 \\\\]\n",
+    "$$ U(t, 0) = E \\ e^{- \\lambda^2 t} = 0 \\quad \\Rightarrow \\quad E = 0 \\\\\n",
+    "U(t, 1) + U_x(t, 1) =  D \\ e^{- \\lambda^2 t} ( \\sin \\lambda + \\lambda \\cos \\lambda) = 0 $$\n",
     "\n",
-    "where we choose \\\\( D \\neq 0 \\\\) as we are interested in non-trivial solutions, so we have \\\\( \\sin \\lambda + \\lambda \\cos \\lambda = 0 \\\\)."
+    "where we choose $ D \\neq 0 $ as we are interested in non-trivial solutions, so we have $ \\sin \\lambda + \\lambda \\cos \\lambda = 0 $."
    ]
   },
   {
@@ -321,16 +321,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also note that we may only consider positive roots \\\\( \\lambda \\\\) because \\\\( \\sin \\lambda + \\lambda \\cos \\lambda = \\sin (- \\lambda) + (-\\lambda) \\cos (-\\lambda) \\\\).\n",
+    "Also note that we may only consider positive roots $ \\lambda $ because $ \\sin \\lambda + \\lambda \\cos \\lambda = \\sin (- \\lambda) + (-\\lambda) \\cos (-\\lambda) $.\n",
     "\n",
-    "There are infinitely many roots \\\\( \\lambda_i \\\\), which we call the **eigenvalues**, so we have infinitely many solutions\n",
+    "There are infinitely many roots $ \\lambda_i $, which we call the **eigenvalues**, so we have infinitely many solutions\n",
     "\n",
-    "\\\\[ X_n (x) = D_n \\sin ( \\lambda_n x) \\\\\n",
-    "T_n (t) = e^{- \\lambda_n^2 t} \\\\]\n",
+    "$$ X_n (x) = D_n \\sin ( \\lambda_n x) \\\\\n",
+    "T_n (t) = e^{- \\lambda_n^2 t} $$\n",
     "\n",
     "and multiplying them together we get the **eigenfunctions**:\n",
     "\n",
-    "\\\\[ U_n (x, t) = D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) \\\\]\n",
+    "$$ U_n (x, t) = D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) $$\n",
     "\n",
     "Each one of these eigenfunctions satisfies the PDE and the BCs."
    ]
@@ -381,21 +381,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But we still need to satisfy the initial condition. Let us assume that we could do that by summing up all functions \\\\( U_n \\\\) (which we are allowed to do because of linearity). That is, consider a Fourier series of the eigenfunctions:\n",
+    "But we still need to satisfy the initial condition. Let us assume that we could do that by summing up all functions $ U_n $ (which we are allowed to do because of linearity). That is, consider a Fourier series of the eigenfunctions:\n",
     "\n",
-    "\\\\[ U(t, x) = \\sum_{n=1}^\\infty U_n = \\sum_{n=1}^\\infty D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) \\\\]\n",
+    "$$ U(t, x) = \\sum_{n=1}^\\infty U_n = \\sum_{n=1}^\\infty D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) $$\n",
     "\n",
-    "where we want to choose coefficients \\\\( D_n \\\\) such that the initial condition \\\\( U(0, x) = \\sin(\\pi x) \\\\) is satisfied:\n",
+    "where we want to choose coefficients $ D_n $ such that the initial condition $ U(0, x) = \\sin(\\pi x) $ is satisfied:\n",
     "\n",
-    "\\\\[ U(0, x) = \\sum_{n=1}^\\infty D_n \\sin ( \\lambda_n x) = \\sin (\\pi x) \\\\]\n",
+    "$$ U(0, x) = \\sum_{n=1}^\\infty D_n \\sin ( \\lambda_n x) = \\sin (\\pi x) $$\n",
     "\n",
-    "To find the coefficients \\\\( D_n \\\\) we multiply both sides by \\\\( \\sin (\\lambda_n x) \\\\) and integrate from \\\\( 0 \\\\) to \\\\( 1 \\\\):\n",
+    "To find the coefficients $ D_n $ we multiply both sides by $ \\sin (\\lambda_n x) $ and integrate from $ 0 $ to $ 1 $:\n",
     "\n",
-    "\\\\[  D_n \\int_0^1 \\sin^2 ( \\lambda_n x) \\ dx = \\int_0^1 \\sin (\\pi x) \\sin (\\lambda_n x) \\ dx \\\\]\n",
+    "$$  D_n \\int_0^1 \\sin^2 ( \\lambda_n x) \\ dx = \\int_0^1 \\sin (\\pi x) \\sin (\\lambda_n x) \\ dx $$\n",
     "\n",
-    "and solve for \\\\( D_n \\\\):\n",
+    "and solve for $ D_n $:\n",
     "\n",
-    "\\\\[ D_n = \\frac{\\int_0^1 \\sin (\\pi x) \\sin (\\lambda_n x) \\ dx}{\\int_0^1 \\sin^2 ( \\lambda_n x) \\ dx} \\\\]"
+    "$$ D_n = \\frac{\\int_0^1 \\sin (\\pi x) \\sin (\\lambda_n x) \\ dx}{\\int_0^1 \\sin^2 ( \\lambda_n x) \\ dx} $$"
    ]
   },
   {
@@ -460,11 +460,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now \\\\( U \\\\) satisfies the PDE, BCs and IC. So our solution \\\\(u = U + S \\\\) is\n",
+    "And now $ U $ satisfies the PDE, BCs and IC. So our solution $u = U + S $ is\n",
     "\n",
-    "\\\\[ u(x, t) = 1 + \\sum_{n=1}^\\infty D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) \\\\]\n",
+    "$$ u(x, t) = 1 + \\sum_{n=1}^\\infty D_n e^{- \\lambda_n^2 t} \\sin ( \\lambda_n x) $$\n",
     "\n",
-    "where \\\\( \\lambda_n \\\\) and \\\\( D_n \\\\) are given above."
+    "where $ \\lambda_n $ and $ D_n $ are given above."
    ]
   },
   {
