--- a/notebooks/c_mathematics/differential_equations/12_wave_eq.ipynb
+++ b/notebooks/c_mathematics/differential_equations/12_wave_eq.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "Finally we consider a hyperbolic PDE: the simple wave equation\n",
     "\n",
-    "\\\\[ u_{tt} = c^2 \\nabla^2 u \\\\]\n",
+    "$$ u_{tt} = c^2 \\nabla^2 u $$\n",
     "\n",
-    "where \\\\( u \\\\) is the displacement of the string. Since the wave equation is second order in time, we will require two initial conditions. We can also write it using the d'Alembert (or *box*) operator \\\\( \\Box \\equiv \\frac{1}{c^2} \\partial_{tt} - \\nabla^2 \\\\) as \\\\( \\Box u = 0 \\\\)."
+    "where $ u $ is the displacement of the string. Since the wave equation is second order in time, we will require two initial conditions. We can also write it using the d'Alembert (or *box*) operator $ \\Box \\equiv \\frac{1}{c^2} \\partial_{tt} - \\nabla^2 $ as $ \\Box u = 0 $."
    ]
   },
   {
@@ -27,7 +27,7 @@
     "(wave_interpretation)=\n",
     "## Physical interpretation\n",
     "\n",
-    "Since \\\\( u \\\\) represents displacement of the string, then \\\\( u_{tt} \\\\) is the acceleration of a point due to tension. So the acceleration of a point is proportional to the concavity at the point, which is related to \\\\( \\nabla^2 \\\\) - the larger the concavity, the larger the acceleration is."
+    "Since $ u $ represents displacement of the string, then $ u_{tt} $ is the acceleration of a point due to tension. So the acceleration of a point is proportional to the concavity at the point, which is related to $ \\nabla^2 $ - the larger the concavity, the larger the acceleration is."
    ]
   },
   {
@@ -84,11 +84,11 @@
     "```{index} D'Alembert's formula\n",
     "```\n",
     "\n",
-    "We showed in a previous notebook that the general solution of the 1 + 1-D wave equation \\\\( u_{tt} = c^2 u_{xx} \\\\) can always be written in the form\n",
+    "We showed in a previous notebook that the general solution of the 1 + 1-D wave equation $ u_{tt} = c^2 u_{xx} $ can always be written in the form\n",
     "\n",
-    "\\\\[ u(t, x) = f(x - ct) + g(x + ct) \\\\]\n",
+    "$$ u(t, x) = f(x - ct) + g(x + ct) $$\n",
     "\n",
-    " What this tells us is that every solution of the wave equations consists of two parts: one moving in the positive x-direction and the other in the negative x-direction, both with velocity \\\\( c \\\\). "
+    " What this tells us is that every solution of the wave equations consists of two parts: one moving in the positive x-direction and the other in the negative x-direction, both with velocity $ c $. "
    ]
   },
   {
@@ -146,39 +146,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now consider an **infinite** string and two general initial conditions, the first for initial displacement \\\\( u \\\\) and the second for initial vertical velocity \\\\( u_t \\\\):\n",
+    "Now consider an **infinite** string and two general initial conditions, the first for initial displacement $ u $ and the second for initial vertical velocity $ u_t $:\n",
     "\n",
-    "\\\\[ u(0, x) = h(x) \\\\ u_t(0, x) = v(x) \\\\]\n",
+    "$$ u(0, x) = h(x) \\\\ u_t(0, x) = v(x) $$\n",
     "\n",
     "As we would with ODEs, we substitute our general solution into these:\n",
     "\n",
-    "\\\\[ u(0, x) = f(x) + g(x) = h(x) \\\\\n",
-    "u_t(0, x) = -c f' (x) + c g' (x) = v(x) \\\\] \n",
+    "$$ u(0, x) = f(x) + g(x) = h(x) \\\\\n",
+    "u_t(0, x) = -c f' (x) + c g' (x) = v(x) $$ \n",
     "\n",
-    "We divide by \\\\( c \\\\) and integrate the second equation along \\\\( x \\\\) coordinate:\n",
+    "We divide by $ c $ and integrate the second equation along $ x $ coordinate:\n",
     "\n",
-    "\\\\[ -f + g + K = \\frac{1}{c} \\int_{x_0}^{x} v(s) \\ ds \\\\]\n",
+    "$$ -f + g + K = \\frac{1}{c} \\int_{x_0}^{x} v(s) \\ ds $$\n",
     "\n",
-    "where \\\\( K = f(x_0) - g(x_0) \\\\). So we have a system of two equations:\n",
+    "where $ K = f(x_0) - g(x_0) $. So we have a system of two equations:\n",
     "\n",
-    "\\\\[ f(x) + g(x) = h(x) \\\\\n",
-    "-f(x) + g(x) = -K + \\frac{1}{c} \\int_{x_0}^{x} v(s) \\ ds \\\\]\n",
+    "$$ f(x) + g(x) = h(x) \\\\\n",
+    "-f(x) + g(x) = -K + \\frac{1}{c} \\int_{x_0}^{x} v(s) \\ ds $$\n",
     "\n",
-    "Which we easily solve for \\\\( f \\\\) and \\\\( g \\\\):\n",
+    "Which we easily solve for $ f $ and $ g $:\n",
     "\n",
-    "\\\\[ f(x) = \\frac{1}{2} \\big( h(x) + K \\big) - \\frac{1}{2c} \\int_{x_0}^x v(s) \\ ds \\\\\n",
-    "g(x) = \\frac{1}{2} \\big( h(x) - K \\big) + \\frac{1}{2c} \\int_{x_0}^x v(s) \\ ds \\\\]\n",
+    "$$ f(x) = \\frac{1}{2} \\big( h(x) + K \\big) - \\frac{1}{2c} \\int_{x_0}^x v(s) \\ ds \\\\\n",
+    "g(x) = \\frac{1}{2} \\big( h(x) - K \\big) + \\frac{1}{2c} \\int_{x_0}^x v(s) \\ ds $$\n",
     "\n",
     "So the solution is\n",
     "\n",
-    "\\\\[ \\begin{aligned} \n",
+    "$$ \\begin{aligned} \n",
     "u(t, x) &= f(x-ct) + g(x+ct) \\\\\n",
     "&= \\frac{1}{2} \\big( h(x-ct) + K \\big) - \\frac{1}{2c} \\int_{x_0}^{x-ct} v(s) \\ ds + \\frac{1}{2} \\big( h(x+ct) - K \\big) + \\frac{1}{2c} \\int_{x_0}^{x+ct} v(s) \\ ds\n",
-    "\\end{aligned} \\\\]\n",
+    "\\end{aligned} $$\n",
     "\n",
     "Which we tidy up to get the **d'Alembert's formula**:\n",
     "\n",
-    "\\\\[ u(t, x) = \\frac{1}{2} \\big( h(x-ct) + h(x+ct) \\big) + \\frac{1}{2c} \\int_{x-ct}^{x+ct} v(s) \\ ds \\\\]"
+    "$$ u(t, x) = \\frac{1}{2} \\big( h(x-ct) + h(x+ct) \\big) + \\frac{1}{2c} \\int_{x-ct}^{x+ct} v(s) \\ ds $$"
    ]
   },
   {
@@ -189,15 +189,15 @@
     "\n",
     "Farlow 1993, p.135, problem 3: What is the solution to the initial-value problem\n",
     "\n",
-    "\\\\[ \\begin{aligned}\n",
+    "$$ \\begin{aligned}\n",
     "& u_{tt} = u_{xx}, \\qquad -\\infty < x < \\infty, 0 < t < \\infty \\\\\n",
     "& u(0, x) = \\exp(-x^2) \\\\\n",
     "& u_t(0, x) = 0\n",
-    "\\end{aligned} \\\\]\n",
+    "\\end{aligned} $$\n",
     "\n",
     "Following the d'Alembert's formula, we find that the solution is\n",
     "\n",
-    "\\\\[ u(t, x) = \\frac{1}{2} \\big( e^{-(x-t)^2} + e^{-(x+t)^2} \\big) \\\\]"
+    "$$ u(t, x) = \\frac{1}{2} \\big( e^{-(x-t)^2} + e^{-(x+t)^2} \\big) $$"
    ]
   },
   {
@@ -1178,7 +1178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, as we mentioned earlier, we have two parts: one moving to the left and one to the right with speed \\\\( c = 1 \\\\)."
+    "Notice that, as we mentioned earlier, we have two parts: one moving to the left and one to the right with speed $ c = 1 $."
    ]
   },
   {
