--- a/notebooks/c_mathematics/differential_equations/2_linear_des.ipynb
+++ b/notebooks/c_mathematics/differential_equations/2_linear_des.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "### Solution methods\n",
     "\n",
-    "- **Separation of variables** when we can algebraically transform the equation to the form $$ f(u) du = g(x) dx $$ which we can integrate directly\n",
+    "- **Separation of variables** when we can algebraically transform the equation to the form $ f(u) du = g(x) dx $ which we can integrate directly\n",
     "- **Variation of parameters** where we find the solution to the homogeneous problem and use it as solution *ansatz* for a particular solution by allowing constants to become new unknown functions which we then seek\n",
     "- **Undetermined coefficients**\n",
     "- **Green's functions**\n",
@@ -87,7 +87,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
