--- a/notebooks/c_mathematics/differential_equations/4_higher_ord_lin_odes.ipynb
+++ b/notebooks/c_mathematics/differential_equations/4_higher_ord_lin_odes.ipynb
@@ -122,11 +122,11 @@
     "\n",
     "The solution of the system of equations {eq}`eq21` and {eq}`eq25` is given by\n",
     "\n",
-    "$$ C'_1 = - \\frac{y_2}{W[y_1, y_2]} r, \\quad C'_2 = \\frac{y_1}{W[y_1, y_2]} r $$\n",
+    "$$ C'_1 = - \\frac{y_2}{W[y_1, y_2]} r, \\quad C'_2 = \\frac{y_1}{W[y_1, y_2]} r $$ (eq26)\n",
     "\n",
     "and after integrating we get\n",
     "\n",
-    "$$ C_1(x) = - \\int^x \\frac{y_2(s)}{W(s)} r(s) \\ ds , \\quad C_2(x) = \\int^x \\frac{y_1(s)}{W(s)} r(s) \\ ds $$ {eq}`eq27`\n",
+    "$$ C_1(x) = - \\int^x \\frac{y_2(s)}{W(s)} r(s) \\ ds , \\quad C_2(x) = \\int^x \\frac{y_1(s)}{W(s)} r(s) \\ ds $$  (eq27)\n",
     "\n",
     "where the choice of the lower bounds of integration is irrelevant since it only changes the coefficients $A$ and $B$ (see below). Therefore, the solution of the inhomogeneous second-order ODE {eq}`eq19` is\n",
     "\n",
@@ -229,11 +229,11 @@
     "\n",
     "so we have three cases depending whether $D > 0, D = 0$ or $D < 0$, keeping in mind that we need linearly independent solutions to form the basis:\n",
     "\n",
-    "1. \\\\( \\lambda_{1,2} \\in \\mathbb{R}, \\lambda_1 \\neq \\lambda_2: \\quad y(x) = C_1 e^{\\lambda_1 x} + C_2e^{\\lambda_2 x} \\\\)\n",
+    "1. $ \\lambda_{1,2} \\in \\mathbb{R}, \\lambda_1 \\neq \\lambda_2: \\quad y(x) = C_1 e^{\\lambda_1 x} + C_2e^{\\lambda_2 x} $\n",
     "\n",
-    "2. \\\\( \\lambda_{1,2} \\in \\mathbb{R}, \\lambda_1 = \\lambda_2: \\quad y(x) = (C_1 + C_2 x)e^{\\lambda_1 x} \\\\)\n",
+    "2. $ \\lambda_{1,2} \\in \\mathbb{R}, \\lambda_1 = \\lambda_2: \\quad y(x) = (C_1 + C_2 x)e^{\\lambda_1 x} $\n",
     "\n",
-    "3. \\\\( \\lambda_{1,2} \\in \\mathbb{C}, \\lambda_2 = \\lambda_1^*: \\quad y(x) = C_1 e^{\\lambda_1 x} + C_2e^{\\lambda_1^* x} \\\\) \n",
+    "3. $ \\lambda_{1,2} \\in \\mathbb{C}, \\lambda_2 = \\lambda_1^*: \\quad y(x) = C_1 e^{\\lambda_1 x} + C_2e^{\\lambda_1^* x} $ \n",
     "\n",
     "\n",
     "```{admonition} Hint: Diagonalisation\n",
@@ -285,7 +285,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
