--- a/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
+++ b/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
@@ -134,9 +134,9 @@
     "\n",
     "$$ u(x, 0) = f(-3x) = \\cos (x) $$\n",
     "\n",
-    "Let $w = -3x$. Then:\n",
+    "Let $w = -3x$. Then,\n",
     "\n",
-    "$$ f(w) = \\cos (-w/3) $$.\n",
+    "$$ f(w) = \\cos (-w/3) $$\n",
     "\n",
     "Hence the solution is\n",
     "\n",
@@ -241,7 +241,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
