--- a/notebooks/c_mathematics/differential_equations/9_poisson_laplace_eq.ipynb
+++ b/notebooks/c_mathematics/differential_equations/9_poisson_laplace_eq.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "Tristan Needham explains this in a more general case (although we could generalise this further to a sphere) very nicely in his book Visual Complex Analysis:\n",
     "\n",
-    "> The Laplacian of $u$ at a point $p$ measures the amount by which the average value of $u$ on an infinitesimal circle centered at $p$ exceeds the value of $u$ at $p$ itself. More precisely, if $r$ is the infinitesimal radius of this circle, then $$ \\overline{u} - u(p) = \\frac{1}{4}r^2 \\Delta u $$\n",
+    "> The Laplacian of $u$ at a point $p$ measures the amount by which the average value of $u$ on an infinitesimal circle centered at $p$ exceeds the value of $u$ at $p$ itself. More precisely, if $r$ is the infinitesimal radius of this circle, then $ \\overline{u} - u(p) = \\frac{1}{4}r^2 \\Delta u $\n",
     "\n",
     "In our case, where $\\Delta u = 0$, this means that the value of $u$ at some point $p$ is equal to the mean of the infinitesimal circle around $p$. Actually, if $u$ is a harmonic function this is true for a circle of any radius. "
    ]
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that on the graph of a function the second derivative is related to the curvature of the graph. In fact, the mean curvature $\\kappa$ of a 3-D surface can be expressed as the divergence of unit normal vectors to the surface \\\\( \\hat{n} \\\\):\n",
+    "We know that on the graph of a function the second derivative is related to the curvature of the graph. In fact, the mean curvature $\\kappa$ of a 3-D surface can be expressed as the divergence of unit normal vectors to the surface $ \\hat{n} $:\n",
     "\n",
     "$$ \\kappa = \\nabla \\cdot \\hat{n} $$\n",
     "\n",
@@ -303,7 +303,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
